# browsebyquery

./: .gitignore
BBQAddIn/: BBQAddIn.sln  CHANGELOG.txt  README.txt
BBQAddIn/BBQAddIn/: BBQAddIn.AddIn  BBQAddIn.csproj  BrowseByQuery.cs  BrowseByQueryBySocket.cs  Connect.cs  QueryWindow.Designer.cs  QueryWindow.cs  QueryWindow.resx  ResultWindow.Designer.cs  ResultWindow.cs  ResultWindow.resx  Test.cs
BBQAddIn/BBQAddInSetup/: BBQAddInSetup.vdproj
BBQAddIn/BBQClient/: BBQClient.csproj  BBQVSIXStrongName.pfx  BbqConfig.cs  BrowseByQuery.cs  IBbqConfig.cs
BBQAddIn/BBQVSIX/: BBQVSIX.csproj  Key.snk  QueryWindow.cs  QueryWindowCommand.cs  QueryWindowControl.xaml  QueryWindowControl.xaml.cs  QueryWindowPackage.cs  QueryWindowPackage.vsct  ResultWindow.cs  ResultWindowCommand.cs  ResultWindowControl.xaml  ResultWindowControl.xaml.cs  VSPackage.resx  app.config  packages.config  source.extension.vsixmanifest
BBQAddIn/BBQVSIX19/: BBQVSIX19.csproj  BBQVSIX19Package.cs  BbqOptions.cs  QueryWindow.cs  QueryWindowControl.xaml  QueryWindowControl.xaml.cs  ResultWindowCommand.cs  ResultWindowControl.xaml.cs  source.extension.vsixmanifest
BBQAddIn/ResourceLister/: ResourceLister.cs  ResourceLister.csproj
BBQAddIn/Test/: Test.cs  Test.csproj
BBQAddIn/VSIXProject2/: BBQVSIX19.vsct  BBQVSIX19Package.cs  QueryWindow.cs  QueryWindowCommand.cs  QueryWindowControl.xaml  QueryWindowControl.xaml.cs  (+4 more)
CVSROOT/: cvsignore  cvswrappers  modules
javagen/: Makefile  Makefile.am  Makepretty  README  configure.ac  genparser.sh  genpretty.sh  javagen.cpp  javapretty.cpp
(+613 files in other folders)
